fixed share widget alignment single case page

--- a/src/templates/SingleCase.css
+++ b/src/templates/SingleCase.css
@@ -50,6 +50,16 @@
   margin-right: 1.2rem;
 }
 
+.Case--InfoBlock .ShareWidget {
+  margin-top: 0;
+  left: 0;
+  transform: translateX(0);
+}
+
+.Case--InfoBlock .ShareWidget h4 {
+  font-size: 1.6rem;
+}
+
 .Case--ContentBlock blockquote {
   color: var(--secondary);
   font-family: 'Open Sans';
